Fixing hamburger on mobile

--- a/style.css
+++ b/style.css
@@ -790,3 +790,7 @@ footer a {
 }
 }
 
+/* Fix for Mobile Menu Scrolling Issue */
+body.nav-open {
+  overflow: hidden;
+}
